Add another test question

--- a/data/Fragenkatalog-Binnen-Mai-2012.yaml
+++ b/data/Fragenkatalog-Binnen-Mai-2012.yaml
@@ -31,3 +31,8 @@ question-chapters:
                 answer: Der verantwortliche Fahrzeugführer muss gewählt werden.
                 answer: Ein Inhaber des Sportbootführerscheins muss die Fahrzeugführung übernehmen.
                 answer: Ein Inhaber des Sportbootführerscheins muss die Verantwortung übernehmen.
+              - text: In welchen Fällen darf weder ein Sportboot geführt noch dessen Kurs oder Geschwindigkeit selbstständig bestimmt werden?
+                correctanswer: Wenn man infolge körperlicher oder geistiger Mängel oder infolge des Genusses alkoholischer Getränke oder anderer berauschender Mittel in der sicheren Führung behindert ist oder wenn eine Blutalkoholkonzentration von 0,5 ‰ oder mehr im Körper vorhanden ist.
+                answer: Wenn man infolge körperlicher oder geistiger Mängel oder infolge des Genusses alkoholischer Getränke oder anderer berauschender Mittel in der sicheren Führung behindert ist oder wenn eine Blutalkoholkonzentration von 0,8 ‰ oder mehr im Körper vorhanden ist.
+                answer: Wenn man infolge körperlicher oder geistiger Mängel oder infolge des Genusses alkoholischer Getränke oder anderer berauschender Mittel in der sicheren Führung behindert ist oder wenn eine Blutalkoholkonzentration von 1,0 ‰ oder mehr im Körper vorhanden ist.
+                answer: Wenn man infolge körperlicher oder geistiger Mängel oder infolge des Genusses alkoholischer Getränke oder anderer berauschender Mittel in der sicheren Führung behindert ist oder wenn eine Blutalkoholkonzentration von 0,3 ‰ oder mehr im Körper vorhanden ist.
